refactor: lint code